--- a/StoreService/StoreService.csproj
+++ b/StoreService/StoreService.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseLayer.cs" />
     <Compile Include="IStoreServ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreServ.cs" />
