--- a/StoreService/StoreService.csproj
+++ b/StoreService/StoreService.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DatabaseLayer.cs" />
     <Compile Include="IStoreServ.cs" />
+    <Compile Include="MailHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreServ.cs" />
   </ItemGroup>
