--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -63,6 +63,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\PrinterService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\StoreService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -91,6 +96,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Service References\PrinterService\Printer.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PrinterService\Printer1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PrinterService\PrinterServ.wsdl" />
     <None Include="Service References\StoreService\StoreServ.wsdl" />
     <None Include="Service References\StoreService\StoreService.xsd">
       <SubType>Designer</SubType>
@@ -109,6 +121,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\PrinterService\" />
     <WCFMetadataStorage Include="Service References\StoreService\" />
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +135,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\StoreService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PrinterService\Printer.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PrinterService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PrinterService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PrinterService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
