--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -95,6 +95,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Service References\StoreService\StoreApp.StoreService.StoreBook.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\StoreService\StoreApp.StoreService.StoreOrder.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\StoreService\StoreApp.StoreService.StoreRequest.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\StoreService\StoreServ.wsdl" />
     <None Include="Service References\StoreService\StoreService.xsd">
       <SubType>Designer</SubType>
@@ -103,6 +112,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\StoreService\StoreService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\StoreService\StoreService3.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
