--- a/StoreService/StoreService.csproj
+++ b/StoreService/StoreService.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseLayer.cs" />
+    <Compile Include="IStoreCallback.cs" />
     <Compile Include="IStoreServ.cs" />
     <Compile Include="MailHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -51,12 +52,6 @@
     <Compile Include="StoreOrder.cs" />
     <Compile Include="StoreRequest.cs" />
     <Compile Include="StoreServ.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
