--- a/Warehouse/Warehouse.csproj
+++ b/Warehouse/Warehouse.csproj
@@ -101,8 +101,11 @@
     <None Include="Service References\StoreService\StoreService2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\StoreService\StoreService3.xsd">
-      <SubType>Designer</SubType>
+    <None Include="Service References\StoreService\Warehouse.StoreService.StoreBook.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\StoreService\Warehouse.StoreService.StoreOrder.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\StoreService\Warehouse.StoreService.StoreRequest.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
